cleaned up notice styles and alignment, fixed width of modal, swapped out close button for Cancel

--- a/src/apps/content-editor/src/app/views/ItemEdit/components/Header/ItemVersioning/ScheduleFlyout/ScheduleFlyout.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/components/Header/ItemVersioning/ScheduleFlyout/ScheduleFlyout.less
@@ -1,13 +1,16 @@
 @import "~@zesty-io/core/colors.less";
 
 .Modal {
+  max-width: fit-content;
   .Row {
     margin: 8px 0;
   }
-
+  .Notice {
+    align-items: center;
+  }
   .ModalFooter {
     display: flex;
-    .Close {
+    .Cancel {
       margin-left: 8px;
     }
   }
